--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,12 @@
   margin: 0;
   box-sizing: border-box;
 }
+.App {
+  .cont-home {
+    background-color: rgb(111, 111, 111);
+    .cont-forecast {
+      .time-forecast {
+      }
+    }
+  }
+}
