adj-icons-style

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,12 +6,7 @@
   margin: 0;
   box-sizing: border-box;
 }
-.App {
-  .cont-home {
-    background-color: rgb(111, 111, 111);
-    .cont-forecast {
-      .time-forecast {
-      }
-    }
-  }
+
+.footer {
+  background-color: #55a5ca;
 }
