--- a/src/customs/_variables.scss
+++ b/src/customs/_variables.scss
@@ -1,5 +1,5 @@
 $primary: #141414;
 $secondary: white;
-$success: #495057;
+$success: #a0d8f2c7;
 $danger: rgb(185, 0, 0);
-$info: #949495;
+$info: #80d2f7;
