--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,18 @@
   margin: 0;
   box-sizing: border-box;
 }
-
 .bg {
   background-color: #a0d8f2c7;
 }
+
+/* .cont-forecast {
+  &:hover {
+    transform: scale(1.02);
+  }
+}
+.cont-city {
+  &:hover {
+    transform: scale(1.02);
+  }
+}
+ */
